--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -19,7 +19,7 @@
 	<div class="alert alert-danger">
         <h2>{{ .Title }}</h2>
         <p>{{ .Anons}}</p>
-        <a href="/post{{ .Id}}" class="btn btn-danger">Читать далее</a>
+        <a href="/post/{{ .Id }}" class="btn btn-danger">Читать далее</a>
     </div>
     {{else}}
     <p class="lead">Статей нет</p>
